crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_6.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009 [*] UTF-8 encoding declaration is unnecessary
 --> UP009_6.py:1:2
  |
1 |  # coding=utf8
  |  ^^^^^^^^^^^^^
2 | print("Hello world")
help: Remove unnecessary coding comment
  |
  -  # coding=utf8
1 | print("Hello world")
  |
