crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP009_utf8_utf8_other.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP009 [*] UTF-8 encoding declaration is unnecessary
 --> UP009_utf8_utf8_other.py:1:1
  |
1 | # -*- coding: utf-8 -*-
  | ^^^^^^^^^^^^^^^^^^^^^^^
2 | # -*- coding: utf-8 -*-
3 | # -*- coding: ascii -*-
help: Remove unnecessary coding comment
  |
1 | # -*- coding: utf-8 -*-
  - # -*- coding: utf-8 -*-
2 | # -*- coding: ascii -*-
  |
