crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP011.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP011 [*] Unnecessary parentheses to `functools.lru_cache`
 --> UP011.py:5:21
  |
5 | @functools.lru_cache()
  |                     ^^
6 | def fixme():
7 |     pass
help: Remove unnecessary parentheses
  |
4 |
  - @functools.lru_cache()
5 + @functools.lru_cache
6 | def fixme():
  |

UP011 [*] Unnecessary parentheses to `functools.lru_cache`
  --> UP011.py:10:11
   |
10 | @lru_cache()
   |           ^^
11 | def fixme():
12 |     pass
help: Remove unnecessary parentheses
   |
9  |
   - @lru_cache()
10 + @lru_cache
11 | def fixme():
   |

UP011 [*] Unnecessary parentheses to `functools.lru_cache`
  --> UP011.py:16:21
   |
15 | @other_decorator
16 | @functools.lru_cache()
   |                     ^^
17 | def fixme():
18 |     pass
help: Remove unnecessary parentheses
   |
15 | @other_decorator
   - @functools.lru_cache()
16 + @functools.lru_cache
17 | def fixme():
   |

UP011 [*] Unnecessary parentheses to `functools.lru_cache`
  --> UP011.py:21:21
   |
21 | @functools.lru_cache()
   |                     ^^
22 | @other_decorator
23 | def fixme():
help: Remove unnecessary parentheses
   |
20 |
   - @functools.lru_cache()
21 + @functools.lru_cache
22 | @other_decorator
   |
